--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   pinput: ^1.2.2
   pin_entry_text_field: ^0.1.4
   flutter_screenutil: ^5.1.1
+  shimmer: ^2.0.0
+  smooth_page_indicator: ^1.0.0+2
+  carousel_slider: ^4.0.0
+  intl: ^0.17.0
+  circular_menu: ^1.2.3
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
